// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual Ticket reducer Set end date moment object 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": Object {
    "title": "End Moment",
  },
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set has been created value 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set has been created value 2`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": true,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set is loading value 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set is loading value 2`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": true,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set start date moment object 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": Object {
    "title": "Start Moment",
  },
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set the amount of available tickets 1`] = `
Object {
  "SKU": "",
  "available": 20,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set the amount of sold tickets 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 20,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket post ID 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 10,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket pristine 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket pristine 2`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket capacity 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": 49,
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket capacity type 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": 59,
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket description 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "The Next Generation of Digital Agency",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket end date 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": undefined,
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket end time 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": undefined,
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket is editing 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": true,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket is editing 2`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": true,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket price 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": 102,
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket sku 1`] = `
Object {
  "SKU": "MODERN-TRIBE",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket start date 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": undefined,
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket start time 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": undefined,
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket title 1`] = `
Object {
  "SKU": "",
  "available": 0,
  "capacity": "",
  "capacityType": "capped",
  "currencySymbol": undefined,
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "provider": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "Modern Tribe",
}
`;
